# QSnake

./: CMakeLists.txt  README.md  block.cpp  block.h  fruit.cpp  fruit.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  restart.cpp  snake.cpp  snake.h
